[package]
name = "oram"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/facebook/oram"
description = "An implementation of Oblivious RAM."
license = "MIT OR Apache-2.0"
keywords = ["oram", "oblivious RAM", "cryptography"]
categories = ["cryptography"]


[dependencies]
subtle = "2.5"
rand = "0.8"
aligned = "0.4"
generic-array = "1"
paste = "1.0"
seq-macro = "0.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
